--- a/style-guide/components/Layout/LayoutContent.scss
+++ b/style-guide/components/Layout/LayoutContent.scss
@@ -6,6 +6,7 @@
 .dm-layout__content {
   position: relative;
   width: 100%;
+  max-width: 100%;
   margin: 0 auto;
 
   @include for-each-breakpoint {
@@ -20,10 +21,10 @@
 }
 
 .dm-layout__content--padded {
-  padding: $page-padding-v $page-padding-h;
+  padding: 0 $page-padding-h;
 
   @include screen-less-than($layout-change-point) {
-    padding-left: 0;
     padding-right: 0;
+    padding-left: 0;
   }
 }
